# clapi-rs

./: .gitignore  Cargo.toml  README.md
benches/: 0_command.rs  (+2 more)
clapi/: Cargo.toml
clapi/src/: app_macro.rs  app_macros.rs  arg_count.rs  args.rs  command.rs  command_line.rs  context.rs  error.rs  help.rs  lib.rs  main.rs  option.rs  parse_result.rs  parser.rs  root_command.rs  serde.rs  suggestion.rs  symbol.rs  token.rs  tokenizer.rs  typing.rs  validator.rs  value_count.rs  version.rs
clapi/src/utils/: cell.rs  ext.rs  inner_cell.rs  lazy.rs  macros.rs  mod.rs  once_cell.rs
clapi_internal/: Cargo.toml
clapi_internal/src/: lib.rs  var.rs
clapi_internal/src/ext/: mod.rs
clapi_macros/: Cargo.toml  build.rs
clapi_macros/macro_attribute/src/: macro_attr.rs  name_value_attr.rs
clapi_macros/macro_attribute_args/src/: macro_attr_args.rs  name_value_attr.rs
clapi_macros/macro_tests/tests/: compiletest.rs
clapi_macros/macro_tests/tests/ui/fail/: invalid_symbol.rs
clapi_macros/src/: arg.rs  args.rs  assertions.rs  attr.rs  attr_data.rs  command.rs  consts.rs  keys.rs  lib.rs  option.rs  parser.rs  query.rs  shared.rs  utils.rs  var.rs
clapi_macros/src/ext/: attr_ext.rs  file_ext.rs  iterator_ext.rs  lit_ext.rs  mod.rs  mod_ext.rs  type_ext.rs
clapi_macros/src/macro_attribute/: macro_attr.rs  mod.rs  name_value_attr.rs
clapi_macros/src/utils/: item_path.rs  macros.rs  mod.rs  name_path.rs
clapi_macros/test_suite/tests/: compiletest.rs
examples/: 0_parser.rs  1_commandline.rs  2_macros.rs  3_attributes.rs  4_attr_subcommands_nightly.rs  Cargo.toml
examples/clapi_with_parser/: Cargo.toml
examples/clapi_with_parser/src/: main.rs
test_suite/: Cargo.toml  build.rs
test_suite/tests/: compiletest.rs
test_suite/tests/ui/fail/duplicated_attribute_arg/: duplicated_arg.rs  duplicated_arg.stderr  duplicated_option.rs  duplicated_option.stderr  duplicated_option_arg.rs  duplicated_option_arg.stderr
test_suite/tests/ui/fail/help_attribute/: duplicated_command_help.rs  duplicated_command_help.stderr  duplicated_command_usage.rs  duplicated_command_usage.stderr
test_suite/tests/ui/fail/invalid_arg_count_in_array/: invalid_arg_array_min_max.rs  invalid_arg_array_min_max.stderr  invalid_option_array_min_max.stderr
test_suite/tests/ui/fail/invalid_arg_count_in_option/: invalid_arg_option_max.rs  invalid_arg_option_max.stderr  invalid_arg_option_min.rs  invalid_arg_option_min.stderr  invalid_option_option_max.rs  invalid_option_option_max.stderr  invalid_option_option_min.rs  invalid_option_option_min.stderr
test_suite/tests/ui/fail/invalid_arg_count_in_type/: invalid_arg_type_max.rs  invalid_arg_type_max.stderr  invalid_arg_type_min.rs  invalid_arg_type_min.stderr  invalid_option_type_max.rs  invalid_option_type_max.stderr  invalid_option_type_min.rs  invalid_option_type_min.stderr
test_suite/tests/ui/fail/invalid_arg_count_min_max/: invalid_arg_count_bool_flag.rs  invalid_arg_count_bool_flag.stderr  invalid_arg_min_max.rs  invalid_arg_min_max.stderr  invalid_option_min_max.rs  invalid_option_min_max.stderr
test_suite/tests/ui/fail/invalid_array_min_max/: invalid_arg_array_min_max.stderr  invalid_option_array_min_max.rs  invalid_option_array_min_max.stderr
test_suite/tests/ui/fail/invalid_attr_value_for_arg/: invalid_arg_arg.rs  invalid_arg_arg.stderr  invalid_arg_default.stderr  invalid_arg_description.stderr  invalid_arg_error.rs  invalid_arg_error.stderr  invalid_arg_max.rs  invalid_arg_max.stderr  invalid_arg_min.stderr  invalid_arg_name.rs  invalid_arg_name.stderr  invalid_arg_values.rs  invalid_arg_values.stderr
test_suite/tests/ui/fail/invalid_attr_value_for_command/: invalid_command_description.stderr  invalid_command_help.rs  invalid_command_help.stderr  invalid_command_hidden.rs  invalid_command_hidden.stderr  invalid_command_name.rs  invalid_command_name.stderr  invalid_command_usage.rs  invalid_command_usage.stderr  invalid_command_version.rs  invalid_command_with_help.rs  invalid_command_with_help.stderr  invalid_command_with_usage.rs  invalid_command_with_usage.stderr
test_suite/tests/ui/fail/invalid_attr_value_for_option/: invalid_option_arg.rs  invalid_option_default.stderr  invalid_option_error.rs  invalid_option_error.stderr  invalid_option_flag.rs  invalid_option_flag.stderr  invalid_option_hidden.rs  invalid_option_hidden.stderr  invalid_option_max.rs  invalid_option_max.stderr  invalid_option_min.rs  invalid_option_min.stderr  invalid_option_multiple.rs  invalid_option_multiple.stderr  invalid_option_name.rs  invalid_option_name.stderr  invalid_option_requires_assign.rs  invalid_option_requires_assign.stderr  invalid_option_values.rs  invalid_option_values.stderr
test_suite/tests/ui/fail/invalid_attr_value_for_subcommand/: invalid_subcommand_about.rs  invalid_subcommand_description.rs  invalid_subcommand_help.rs  invalid_subcommand_help.stderr  invalid_subcommand_hidden.rs  invalid_subcommand_hidden.stderr  invalid_subcommand_name.rs  invalid_subcommand_name.stderr  invalid_subcommand_usage.rs  invalid_subcommand_usage.stderr  invalid_subcommand_version.stderr  invalid_subcommand_with_help.rs  (+3 more)
test_suite/tests/ui/nightly/: basic_command.rs
test_suite/tests/ui/pass/: app_command_macro.rs  app_macro.rs  arg_array_type.rs  arg_mut_slice.rs  arg_mut_type.rs  arg_option_type.rs  arg_slice_type.rs  arg_type.rs  arg_vec_type.rs  basic_command.rs  option_array_type.rs  option_mut_slice.rs  option_mut_type.rs  option_option_type.rs  option_slice_type.rs  option_type.rs  option_vec_type.rs
(+102 files in other folders)
