[package]
name = "clapi"
description="A framework for create command-line applications"
keywords=["command-line", "command", "framework", "parse", "parser", "parsing", "macros", "api"]
version = "0.1.0"
authors = ["Freddy L. <freddy_luis_94@hotmail.com>"]
edition = "2018"

[features]
macros = ["clapi_macros"]

[dependencies]
linked_hash_set = "0.1.4"
clapi_macros = { optional=true, path="../clapi_macros" }