[package]
name = "clapi"
description="A framework for create command-line applications"
keywords=["command-line", "command", "framework", "parse", "parser", "parsing", "macros", "api"]
version = "0.1.0"
authors = ["Freddy L"]
edition = "2018"

[features]
macros = ["clapi_macros"]
typing = []

[dependencies]
clapi_macros = { optional=true, path="../clapi_macros" }
clapi_internal = { path= "../clapi_internal" }
serde = { version="1.0.118", features=["derive"], optional=true }

[dev-dependencies]
serde_test = "1.0.118"
serde_json = "1.0.60"

[package.metadata.docs.rs]
all-features = true
rustflags = ["--cfg", "doc_cfg"]