[package]
name = "clapi"
description="A framework for create command-line applications"
keywords=["command-line", "command", "framework", "parser", "macros" ]
version = "0.1.0"
authors = ["Freddy L"]
license="Apache-2.0"
edition = "2018"
repository= "https://github.com/Neo-Ciber94/clapi-rs"

[features]
macros = ["clapi_macros"]
typing = []

[dependencies]
clapi_macros = { optional=true, version="0.1.0" }
clapi_internal = { version="0.1.0" }
serde = { version="1.0.118", features=["derive"], optional=true }

[dev-dependencies]
serde_test = "1.0.118"
serde_json = "1.0.60"

[package.metadata.docs.rs]
all-features = true
rustflags = ["--cfg", "doc_cfg"]