[package]
name = "clapi_internal"
description = "Internal utilities for clapi"
version = "0.1.0"
authors = ["Freddy L"]
license ="Apache-2.0"
edition = "2021"
repository= "https://github.com/Neo-Ciber94/clapi-rs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
syn = { version="1.0.45", features=["full", "extra-traits", "parsing"] }
quote = "1.0.7"