[package]
name = "clapi_macros"
version = "0.1.0"
authors = ["Freddy L"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version="1.0.24", features=["span-locations"] }
syn = { version="1.0.45", features=["full", "extra-traits", "parsing", "visit"] }
quote = "1.0.7"
linked_hash_set = "0.1.4"