[package]
name = "clapi_macros"
description = "Macros for clapi"
version = "0.1.0"
authors = ["Freddy L"]
license = "Apache-2.0"
edition = "2018"
repository= "https://github.com/Neo-Ciber94/clapi-rs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version="1.0.24", features=["span-locations"] }
syn = { version="1.0.56", features=["full", "extra-traits", "parsing", "visit"] }
quote = "1.0.7"
linked_hash_set = "0.1.4"