[package]
name = "examples"
version = "0.0.0"
authors = ["Freddy L"]
edition = "2018"
publish = false

[dependencies]
clapi = { path="../clapi", features=["macros"] }
serde = "1.0.125"
serde_json = "1.0.64"
once_cell = "1.7.2"

[[example]]
name = "0_parser"
path = "0_parser.rs"

[[example]]
name = "1_commandline"
path = "1_commandline.rs"

[[example]]
name = "2_macros"
path = "2_macros.rs"

[[example]]
name = "3_attributes"
path = "3_attributes.rs"

[[example]]
name = "4_attr_subcommands_nightly"
path = "4_attr_subcommands_nightly.rs"
